version 2.1.4 (in progress)
	- Added support for the copysign function

version 2.1.3 (22 Feb 2024)
	- Added interp2d and interp3d interpolation functions
	- Added option of nearest-neighbour interpolation

version 2.1.2 (3 Oct 2023)
	- Further bug fixes to reduction of active arrays which did not
	have addequate space allocated by check_space, including "product"
	which requires an additional differential operation per element
	- Fixed out-of-bounds access in test_thread_safe_arrays
	- Slight change to reduce_dimension to avoid incorrect warning
	about ExpressionSize array subscript of -1
	- Fixed broken benchmark/autodiff_benchmark to work with ADOL-C
	- Changed COMPILE_FLAGS argument order in test/Makefile in case
	CPPFLAGS contains Timer.h or other conflicting header file
	- Added benchmark/math_benchmark program

version 2.1.1 (10 April 2022)
	- interp function can perform 1D interpolation of higher
	dimensional Y arrays
	- Bug fix in reduction of an "n" dimensional active array to an
	"n-1" dimensional array: check_space had been forgotten
	- Added Newton-Levenberg[-Marquardt] options to test_minimizer,
	which use the exact Hessian of the Rosenbrock banana function

version 2.1 (5 February 2021)
	- Removed README in favour of README.md

version 2.0.9 (28 January 2021)
	- Fix bug in Array::alignment_offset causing occasional
	crashes reduce and assign operations due to unaligned AVX access,
	now tested in test_packet_operations
	- Added Conjugate-Gradient and L-BFGS minimization methods, both
	bounded and unbounded methods
	- Disabled vectorization on 32-bit ARM NEON targets as there are
	insufficient floating-point intrinsics
	- Fixed interp(x,y,xi) function in case x and y have 0 or 1
	elements

version 2.0.8 (22 August 2020)
	- Added adept_optimize.h header file providing minimization
	capability, initially with the constrained and unconstrained
	Levenberg-Marquardt minimization algorithm
	- Test program test_minimizer tests with the N-dimensional