@@ -1,5 +1,6 @@
 version 2.1.4 (in progress)
 	- Added support for the copysign function
+	- Added aArray::set_gradient(Array) function
 
 version 2.1.3 (22 Feb 2024)
 	- Added interp2d and interp3d interpolation functions
